Fixed Cross Button and some Alignment

--- a/frontend/autoFront/src/components/addcompany/AddCompany.css
+++ b/frontend/autoFront/src/components/addcompany/AddCompany.css
@@ -44,7 +44,6 @@
 }
 
 .close-button-addcompany {
-  position: absolute;
   top: 10px;
   right: 10px;
   background: none;
@@ -156,7 +155,7 @@
   }
 
   .form-group input {
-    width: 96.1%;
+    width: 95%;
   }
 }
 
